--- a/BQ2/.vscode/settings.json
+++ b/BQ2/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stack": "cpp"
+        "stack": "cpp",
+        "iosfwd": "cpp",
+        "string": "cpp"
     }
 }
